# stroyhub

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  alembic.ini  compose.yml  docker-compose.yml  pyproject.toml
docs/: admin.md  api.md  architecture.md  catalog-quality-operations.md  category-predictor-pipeline.md  category-quality.md  category-taxonomy-maintenance.md  database.md  decisions.md  local-data-collection.md  ml.md  product-matching.md  public-api.md  shop-readiness.md  source-candidates.md  source-fixtures.md  sources.md
migrations/: README  env.py
scripts/: backfill_category_ids.py  backfill_product_suitability.py  check_patron_readiness.py  discover_twogis_shops.py  report_category_coverage.py  report_product_match_candidates.py  report_scrape_runs.py  scrape_metalltorg_page.py  scrape_shop_sources.py  scrape_twogis_shop.py  scrape_twogis_whitelist.py  seed_categories.py  seed_metalltorg_source.py  seed_twogis_whitelist.py  seed_unicom_source.py  setup_data_collection.py
tests/: test_api_app_split.py  test_canonical_products_api.py  test_catalog_quality_checks.py  test_catalog_quality_pipeline.py  test_catalog_workflows_api.py  test_categorization.py  test_category_api.py  test_category_backfill.py  test_category_coverage_report.py  test_category_seed.py  test_data_collection_setup.py  test_database_models.py  test_m16_catalog_quality_acceptance.py  test_match_candidates_api.py  test_metalltorg_cli.py  test_metalltorg_parser.py  test_metalltorg_scraping.py  test_metalltorg_source_seed.py  test_ml_category_label_cli.py  (+44 more)
(+114 files in other folders)
