[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "stroyhub"
version = "0.1.0"
description = "Construction material price aggregator for Yakutsk"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic-settings>=2.8",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "httpx>=0.28",
    "celery>=5.4",
    "redis>=5.2",
    "joblib>=1.5.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "ruff>=0.9",
    "mypy>=1.14",
]

[tool.hatch.build.targets.wheel]
packages = [
    "packages/stroyhub",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
packages = ["stroyhub"]
strict = true

[[tool.mypy.overrides]]
module = ["celery", "celery.*", "joblib"]
ignore_missing_imports = true
